--- a/uaskomput.html
+++ b/uaskomput.html
@@ -5,7 +5,7 @@
 <body>
   <main>
     <h1>Nama : Daffa Virdianto</h1> 
-    <h2>NIM :</h2>
+    <h2>NIM : 19030012</h2>
   </main>
 </body>
 </html>
